# DIREM

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260425_001_create_users.py  20260425_002_domain_model.py  20260429_003_add_user_language_code.py  20260503_004_add_user_bunker_state.py  20260503_005_create_reminder_checkins.py  20260504_006_pending_delivery_status.py
docs/: ARCHITECTURE.md  BACKLOG.md  COAUTHORS.md  CONCEPT.md  DECISIONS.md  PRODUCT_SCOPE.md  ROADMAP.md  RUNTIME_SMOKE.md  VERSIONING.md
docs/design/: DIREM-023-bunker-mode.md  DIREM-031-response-checkins.md
docs/releases/: direm-v0.1.0.md  direm-v0.2.0.md
docs/tickets/: DIREM-001-project-skeleton.md  DIREM-002-domain-model.md  DIREM-003-schedule-calculation.md  DIREM-004-user-timezone-flow.md  DIREM-005-create-reminder-flow.md  DIREM-006-list-reminders-flow.md  DIREM-007-pause-resume-reminder-flow.md  DIREM-008-delete-reminder-flow.md  DIREM-009-worker-reminder-delivery-mvp.md  DIREM-010-runtime-smoke-release-readiness.md  DIREM-011-runtime-smoke-new-confirm-session-fix.md  DIREM-012-runtime-smoke-control-active-window-format-fix.md  DIREM-013-telegram-command-menu-cancel-flow.md  DIREM-014-inline-reminder-control-buttons.md  DIREM-015-language-selection-i18n-foundation.md  DIREM-016-pre-release-telegram-ux-polish.md  DIREM-017-v0.1.0-release-pass.md  DIREM-018-post-release-backlog-planning.md  DIREM-019-guided-first-run-onboarding.md  DIREM-020-timezone-picker-ux.md  (+13 more)
tests/unit/: test_i18n.py  (+26 more)
(+52 files in other folders)
